[gd_scene load_steps=26 format=3 uid="uid://f7uy8ai71bmr"]

[ext_resource type="PackedScene" uid="uid://cskp5l2xnoth1" path="res://scenes/DummyPlayer.tscn" id="1_tdapf"]
[ext_resource type="PackedScene" uid="uid://bya7fkjtkijcy" path="res://resources/FurnitureScenes/BookcaseLow.tscn" id="2_tdapf"]
[ext_resource type="PackedScene" uid="uid://dfnrv365qegho" path="res://scenes/Laptop.tscn" id="3_v41fp"]
[ext_resource type="PackedScene" uid="uid://8e5qowsgr6lu" path="res://resources/FurnitureScenes/Door.tscn" id="4_7shrw"]
[ext_resource type="PackedScene" uid="uid://cwktp56vafgil" path="res://resources/FurnitureScenes/WallWindow.tscn" id="5_viowm"]
[ext_resource type="PackedScene" uid="uid://da7tdgxuinrfd" path="res://resources/FurnitureScenes/Wall.tscn" id="6_1n6yq"]
[ext_resource type="PackedScene" uid="uid://cxfa4l5brxvne" path="res://resources/FurnitureScenes/WallCorner.tscn" id="7_yovvs"]
[ext_resource type="PackedScene" uid="uid://i1x78r4gg7u" path="res://resources/FurnitureScenes/WallDoor.tscn" id="8_2axsc"]
[ext_resource type="PackedScene" uid="uid://n16r124sohdv" path="res://resources/FurnitureScenes/DeskChair.tscn" id="9_wrgne"]
[ext_resource type="PackedScene" uid="uid://c2dlr2udwovwb" path="res://resources/FurnitureScenes/Desk.tscn" id="10_hm0al"]
[ext_resource type="PackedScene" uid="uid://y06d54nykjhg" path="res://resources/FurnitureScenes/BunkBed.tscn" id="11_i7r3k"]
[ext_resource type="PackedScene" uid="uid://bb0ngfm1t32dh" path="res://resources/FurnitureScenes/ramp.tscn" id="12_os5dr"]
[ext_resource type="PackedScene" uid="uid://mtv8mfimxhys" path="res://resources/FurnitureScenes/WallLamp.tscn" id="13_duata"]
[ext_resource type="PackedScene" uid="uid://ds0op5pbuonmy" path="res://resources/FurnitureScenes/CeilingLamp.tscn" id="14_lw0hr"]
[ext_resource type="PackedScene" uid="uid://3rc83b1nnclg" path="res://models/Furniture/GLTF format/cabinetBedDrawerTable.glb" id="15_gnvml"]
[ext_resource type="PackedScene" uid="uid://cxwu5hrl12fe6" path="res://scenes/Button.tscn" id="16_d3xvo"]
[ext_resource type="Script" uid="uid://0003hnxxoyp0" path="res://scenes/scripts/MainMenu.gd" id="17_8vx4p"]
[ext_resource type="PackedScene" uid="uid://ciuuwxjsv6aqx" path="res://resources/FurnitureScenes/Rug.tscn" id="17_ynb5t"]
[ext_resource type="Theme" uid="uid://dkf88k4vtclv1" path="res://scenes/MainMenu.tres" id="19_7shrw"]
[ext_resource type="Texture2D" uid="uid://dnk06wd4bpxj2" path="res://resources/Logo.png" id="19_v41fp"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_ijewl"]
sky_top_color = Color(0.258869, 0.313189, 0.388741, 1)
sky_horizon_color = Color(0.51475, 0.52058, 0.530468, 1)
ground_horizon_color = Color(0.51475, 0.52058, 0.530468, 1)
energy_multiplier = 0.9

[sub_resource type="Sky" id="Sky_va0de"]
sky_material = SubResource("ProceduralSkyMaterial_ijewl")

[sub_resource type="Environment" id="Environment_xhjsn"]
background_mode = 2
sky = SubResource("Sky_va0de")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8xg12"]
albedo_color = Color(0.52, 0.52, 0.52, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7shrw"]
bg_color = Color(1, 0.92549, 0.694118, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.192157, 0.0823529, 0.0666667, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 2

[node name="TestLevel" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.32701, -0.112216, -0.98814)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_xhjsn")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.802817, -0.459399, 0.380048, 0, 0.637424, 0.770513, -0.596225, -0.618581, 0.511735, 0.0211477, -0.0399313, 0.025692)
visible = false
light_energy = 0.5
shadow_enabled = true

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.76837e-07, -0.832153, -0.393117)
use_collision = true
size = Vector3(1000, 1, 1000)
material = SubResource("StandardMaterial3D_8xg12")

[node name="Player" parent="." instance=ExtResource("1_tdapf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 18.1112)

[node name="Level" type="Node3D" parent="."]

[node name="bookcaseOpenLow" parent="Level" instance=ExtResource("2_tdapf")]
transform = Transform3D(-6.55671e-07, 0, 15, 0, 15, 0, -15, 0, -6.55671e-07, 14.89, -0.338433, 29.781)

[node name="laptop" parent="Level" instance=ExtResource("3_v41fp")]
transform = Transform3D(11.5852, 0, 9.52804, 0, 15, 0, -9.52804, 0, 11.5852, -9.20992, 5.38284, 10.9413)

[node name="doorway" parent="Level" instance=ExtResource("4_7shrw")]
transform = Transform3D(15, 0, 0, 0, 15, 0, 0, 0, 15, -8.49656, -0.332161, -10.9285)

[node name="doorway2" parent="Level" instance=ExtResource("4_7shrw")]
transform = Transform3D(1.78873e-07, 0, -15, 0, 15, 0, 15, 0, 1.78873e-07, 15.3273, -0.332161, -6.95133)

[node name="wallWindow" parent="Level" instance=ExtResource("5_viowm")]
transform = Transform3D(15, 0, 0, 0, 15, 0, 0, 0, 15, -4.34729, -0.353696, 37.3517)

[node name="wall3" parent="Level" instance=ExtResource("6_1n6yq")]
transform = Transform3D(-1.83588e-06, 0, -15, 0, 15, 0, 42, 0, -6.55671e-07, 15.273, -0.333, 4.11711)

[node name="wallCorner" parent="Level" instance=ExtResource("7_yovvs")]
transform = Transform3D(-6.55671e-07, 0, -15, 0, 15, 0, 15, 0, -6.55671e-07, -12.394, -0.332, 29.08)

[node name="wallCorner2" parent="Level" instance=ExtResource("7_yovvs")]
transform = Transform3D(-15, 0, 1.31134e-06, 0, 15, 0, -1.31134e-06, 0, -15, 18.158, -0.332, 30.1122)

[node name="wallDoorway" parent="Level" instance=ExtResource("8_2axsc")]
transform = Transform3D(15, 0, -2.62268e-06, 0, 15, 0, 2.62268e-06, 0, 15, -12.3961, -0.332153, -10.7455)

[node name="wallDoorway2" parent="Level" instance=ExtResource("8_2axsc")]
transform = Transform3D(1.78873e-07, 0, -15, 0, 15, 0, 15, 0, 1.78873e-07, 15.254, -0.390868, -10.7686)

[node name="wall2" parent="Level" instance=ExtResource("6_1n6yq")]
transform = Transform3D(40, 0, 0, 0, 15, 0, 0, 0, 15, 1.92, -0.332, -10.75)

[node name="wall" parent="Level" instance=ExtResource("6_1n6yq")]
transform = Transform3D(-1.74846e-06, 0, -15, 0, 15, 0, 40, 0, -6.55671e-07, -12.3948, -0.33291, -10.82)

[node name="chairDesk" parent="Level" instance=ExtResource("9_wrgne")]
transform = Transform3D(5.47047, 0, -13.9669, 0, 15, 0, 13.9669, 0, 5.47047, -8.1029, -0.618705, 7.91303)

[node name="desk" parent="Level" instance=ExtResource("10_hm0al")]
transform = Transform3D(-6.55671e-07, 0, 15, 0, 15, 0, -15, 0, -6.55671e-07, -5.91337, -0.394896, 16.0757)

[node name="bedBunk" parent="Level" instance=ExtResource("11_i7r3k")]
transform = Transform3D(-15, 0, -1.31134e-06, 0, 15, 0, 1.31134e-06, 0, -15, -2.95041, -0.545783, 18.8076)

[node name="floorHalf" parent="Level" instance=ExtResource("12_os5dr")]
transform = Transform3D(6.5, 0, 0, 0, 5.89636, -2.7355, 0, 2.7355, 5.89636, -9.91585, 2.33669, 21.9986)

[node name="floorHalf2" parent="Level" instance=ExtResource("12_os5dr")]
transform = Transform3D(-2.83341e-07, 2.96452, 5.76981, 1.08551e-08, 5.76981, -2.96452, -6.48684, -1.19833e-07, -2.56982e-07, 2.25795, -0.602212, 29.5611)

[node name="floorHalf3" parent="Level" instance=ExtResource("12_os5dr")]
transform = Transform3D(100, 0, 0, 0, 1, 0, 0, 0, 50, -15.1666, 18.9657, 37.2214)

[node name="lampWall" parent="Level" instance=ExtResource("13_duata")]
transform = Transform3D(15, 0, 0, 0, 15, 0, 0, 0, 15, 7.40432, 12.7878, -11.4683)

[node name="lampSquareCeiling2" parent="Level" instance=ExtResource("14_lw0hr")]
transform = Transform3D(15, 0, 0, 0, 15, 0, 0, 0, 15, 0.656125, 15.5067, 17.5164)

[node name="cabinetBedDrawerTable" parent="Level" instance=ExtResource("15_gnvml")]
transform = Transform3D(-14.9996, 0.103602, -0.00573235, 0.103611, 14.9996, -0.0259071, 0.00555325, -0.0259461, -15, 1.29581, -1.06918, 32.3857)

[node name="VideoButton" parent="." instance=ExtResource("16_d3xvo")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 5.87464, -0.459907, 6.58627)

[node name="rugRectangle" parent="." instance=ExtResource("17_ynb5t")]
transform = Transform3D(-6.55671e-07, 0, -15, 0, 15, 0, 15, 0, -6.55671e-07, -1.96155, -0.447377, -1.65917)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-0.767165, 0, 0.64145, 0, 1, 0, -0.64145, 0, -0.767165, 10.1701, 8.19361, 3.25304)
fov = 71.5905

[node name="TextureRect" type="TextureRect" parent="Camera3D"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -588.0
offset_top = -344.0
offset_right = 591.0
offset_bottom = 835.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource("19_v41fp")

[node name="Control" type="Control" parent="Camera3D"]
layout_mode = 3
anchor_left = 0.402083
anchor_top = 0.722222
anchor_right = 0.597917
anchor_bottom = 0.722222
theme = ExtResource("19_7shrw")
metadata/_edit_use_anchors_ = true

[node name="MainMenu" type="VBoxContainer" parent="Camera3D/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -188.0
offset_top = -235.0
offset_right = 188.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("17_8vx4p")

[node name="NewGameButton" type="Button" parent="Camera3D/Control/MainMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_7shrw")
text = "Play"

[node name="SettingsButton" type="Button" parent="Camera3D/Control/MainMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_7shrw")
text = "Settings"

[node name="QuitButton" type="Button" parent="Camera3D/Control/MainMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_7shrw")
text = "Quit"

[connection signal="pressed" from="Camera3D/Control/MainMenu/NewGameButton" to="Camera3D/Control/MainMenu" method="_on_new_game_button_pressed"]
[connection signal="pressed" from="Camera3D/Control/MainMenu/SettingsButton" to="Camera3D/Control/MainMenu" method="_on_settings_button_pressed"]
[connection signal="pressed" from="Camera3D/Control/MainMenu/QuitButton" to="Camera3D/Control/MainMenu" method="_on_quit_button_pressed"]
